refactor: change content of git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,5 @@ FodyWeavers.xsd
 *.sln.iml
 .env
 # End of https://www.toptal.com/developers/gitignore/api/csharp
+Views/appsettings.json
+Views/appsettings.Development.json
