feat(Order, Report, Membership): add CRUD and refactor Interface, ConnectionString - add CRUD function for these entities in 3 layer (Dao, Repository, Service)

--- a/Views/.env.demo
+++ b/Views/.env.demo
@@ -1,1 +1,1 @@
-CONNECTION_STRING=""
+CONNECTION_STRING="Server=DESKTOP-76H7O2B\\SQLEXPRESS;Database=ticket_resell;Uid=sa;Pwd=12345;TrustServerCertificate=true;"
