feat(Chatbox, ChatMessage, Feedback): add CRUD dao, repo, service; Refactor id IDao, IRepository, IService; Refactor Connection String

--- a/Views/.env.demo
+++ b/Views/.env.demo
@@ -1,1 +1,1 @@
-CONNECTION_STRING=""
+CONNECTION_STRING="Server=KRIT-DAT\\SQLEXPRESS;Database=ticket_resell;Uid=sa;Pwd=5748;TrustServerCertificate=True"
