complete GetPaymentLink method in PayOSService

--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -29,7 +29,7 @@
     <None Update=".env">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update=".env.demo">
+    <None Update=".env">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
