--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="payOS" Version="1.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utils\Utils.csproj" />
+  </ItemGroup>
+
 </Project>
