feat(Ticket): CRUD ticket 1.0

--- a/Views/Properties/launchSettings.json
+++ b/Views/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "http": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "Tickets",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
